Respect in-windows settings when launched via DBUS

Respect the settings that are set in the main window of spectacle:

- include mouse pointer

- include window titlebar and borders

BUG: 392057

Include the mouse pointer, when launched via DBUS, depending if the user set the
option to include mouse pointer or not in the checkbox 'option - include mouse pointer'.