src/SpectacleDBusAdapter.h
@@ -20,11 +20,11 @@ public:
 
 public Q_SLOTS:
 
-    Q_NOREPLY void FullScreen(bool includeMousePointer);
-    Q_NOREPLY void CurrentScreen(bool includeMousePointer);
-    Q_NOREPLY void ActiveWindow(bool includeWindowDecorations, bool includeMousePointer);
-    Q_NOREPLY void WindowUnderCursor(bool includeWindowDecorations, bool includeMousePointer);
-    Q_NOREPLY void RectangularRegion(bool includeMousePointer);
+    Q_NOREPLY void FullScreen();
+    Q_NOREPLY void CurrentScreen();
+    Q_NOREPLY void ActiveWindow();
+    Q_NOREPLY void WindowUnderCursor();
+    Q_NOREPLY void RectangularRegion();
     Q_NOREPLY void OpenWithoutScreenshot();
 
 Q_SIGNALS:
