desktop/org.kde.spectacle.desktop.cmake
@@ -219,7 +219,7 @@ Name[uk]=Захопити зображення усієї стільниці
 Name[x-test]=xxCapture Entire Desktopxx
 Name[zh_CN]=截取整个桌面
 Name[zh_TW]=擷取整個桌面
-Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / FullScreen false
+Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / FullScreen
 X-KDE-Shortcuts=Shift+Print
 
 [Desktop Action CurrentMonitorScreenShot]
@@ -267,7 +267,7 @@ Name[uk]=Захопити зображення на моніторі
 Name[x-test]=xxCapture Current Monitorxx
 Name[zh_CN]=截取当前显示器
 Name[zh_TW]=擷取目前螢幕
-Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / CurrentScreen false
+Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / CurrentScreen
 
 
 [Desktop Action ActiveWindowScreenShot]
@@ -315,7 +315,7 @@ Name[uk]=Захопити зображення активного вікна
 Name[x-test]=xxCapture Active Windowxx
 Name[zh_CN]=截取活动窗口
 Name[zh_TW]=擷取作用中的視窗
-Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / ActiveWindow true false
+Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / ActiveWindow true
 X-KDE-Shortcuts=Meta+Print
 
 [Desktop Action RectangularRegionScreenShot]
@@ -363,7 +363,7 @@ Name[uk]=Захопити прямокутну область екрана
 Name[x-test]=xxCapture Rectangular Regionxx
 Name[zh_CN]=截取矩形区域
 Name[zh_TW]=擷取矩形區域
-Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / RectangularRegion true
+Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / RectangularRegion
 X-KDE-Shortcuts=Meta+Shift+Print
 
 [Desktop Action WindowUnderCursorScreenShot]
@@ -400,7 +400,7 @@ Name[ta]=சுட்டிக்குறிக்கு கீழுள்ள 
 Name[uk]=Захопити зображення вікна під вказівником миші
 Name[x-test]=xxCapture Window Under Cursorxx
 Name[zh_CN]=捕获光标所在窗口
-Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / WindowUnderCursor true false
+Exec=@QtBinariesDir@/qdbus org.kde.Spectacle / WindowUnderCursor true
 X-KDE-Shortcuts=Meta+Ctrl+Print
 
 [Desktop Action OpenWithoutScreenshot]
